// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer APPEND_SCREEN_NAME 1`] = `
Object {
  "hashtags": "",
  "healthy": false,
  "linefeed": "
",
  "notification": null,
  "source": "@TweriesApp is awesome",
  "userId": "",
}
`;

exports[`reducer APPEND_SCREEN_NAME 2`] = `
Object {
  "id": Any<String>,
  "tweet": "@TweriesApp is awesome",
}
`;

exports[`reducer CHANGE_HASHTAGS 1`] = `
Object {
  "hashtags": "#FOO",
  "healthy": false,
  "linefeed": "
",
  "notification": null,
  "source": "bar",
  "userId": "",
}
`;

exports[`reducer CHANGE_HASHTAGS 2`] = `
Object {
  "id": Any<String>,
  "tweet": "bar #FOO",
}
`;

exports[`reducer CHANGE_SOURCE 1`] = `
Object {
  "hashtags": "",
  "healthy": false,
  "linefeed": "
",
  "notification": null,
  "source": "bar",
  "userId": "",
}
`;

exports[`reducer CHANGE_SOURCE 2`] = `
Object {
  "id": Any<String>,
  "tweet": "bar",
}
`;

exports[`reducer CHANGE_TWEET 1`] = `
Object {
  "hashtags": "",
  "healthy": false,
  "linefeed": "
",
  "notification": null,
  "source": "qux",
  "userId": "",
}
`;

exports[`reducer CHANGE_TWEET 2`] = `
Object {
  "id": Any<String>,
  "tweet": "quux",
}
`;

exports[`reducer CHANGE_TWEET 3`] = `
Object {
  "id": Any<String>,
  "tweet": "corge",
}
`;

exports[`reducer DISMISS_TOAST 1`] = `
Object {
  "hashtags": "",
  "healthy": false,
  "linefeed": "
",
  "notification": null,
  "source": "",
  "userId": "",
}
`;

exports[`reducer RESET_TWEETSTORM 1`] = `
Object {
  "hashtags": "",
  "healthy": true,
  "linefeed": "
",
  "notification": Object {
    "message": "Oh Noes!",
    "type": "danger",
  },
  "source": "",
  "userId": "twitter|1183836409850814464",
}
`;

exports[`reducer SET_HEALTHY 1`] = `
Object {
  "hashtags": "",
  "healthy": true,
  "linefeed": "
",
  "notification": null,
  "source": "",
  "userId": "",
}
`;

exports[`reducer SET_USER_ID 1`] = `
Object {
  "hashtags": "",
  "healthy": false,
  "linefeed": "
",
  "notification": null,
  "source": "",
  "userId": "twitter|1183836409850814464",
}
`;

exports[`reducer default 1`] = `
Object {
  "hashtags": "",
  "healthy": false,
  "linefeed": "
",
  "notification": null,
  "source": "",
  "userId": "",
}
`;
